Started testing roles.

--- a/config/websocket.yml
+++ b/config/websocket.yml
@@ -22,6 +22,9 @@ default: &default
 development:
   <<: *default
 
+test:
+  <<: *default
+
 production:
   <<: *default
   socket_host: caritas.nomad-labs.com
